voccab: git commit -m "Added title and heading for Weather App"

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>5
 ///We are building a weather app.
+///line two of code
 </head>
 <body>
 <h1>Weather App</h1>
