duyg p 8i7utyhg'] [np;ouiy]

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 ///We are building a weather app.
 ///line two of code
 //next line of code
+///line four of code
+..
 </head>
 <body>
 <h1>Weather App</h1>
+<h2>Check the weather of your city</h2>
 </body>
 </html>
